[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/backgrounds/logo.png" type="Texture" id=1]
[ext_resource path="res://sprites/menu_buttons.png" type="Texture" id=2]
[ext_resource path="res://scenes/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://sprites/backgrounds/cockpit.png" type="Texture" id=4]
[ext_resource path="res://sprites/backgrounds/starfield.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 64, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 64, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 16, 64, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 64, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 64, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 64, 16 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -320.0
margin_bottom = -180.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Starfield" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 192.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.188235, 0.188235, 0.188235, 1 )
margin_right = 320.0
margin_bottom = 192.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 192.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 155.0
margin_bottom = -9.00002
rect_min_size = Vector2( 320, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Play" type="TextureButton" parent="Buttons"]
margin_left = 60.0
margin_right = 124.0
margin_bottom = 16.0
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
texture_hover = SubResource( 3 )

[node name="Button_Credits" type="TextureButton" parent="Buttons"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 16.0
texture_normal = SubResource( 4 )
texture_pressed = SubResource( 5 )
texture_hover = SubResource( 6 )

[node name="Button_Quit" type="TextureButton" parent="Buttons"]
margin_left = 196.0
margin_right = 260.0
margin_bottom = 16.0
texture_normal = SubResource( 7 )
texture_pressed = SubResource( 8 )
texture_hover = SubResource( 9 )

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="Buttons/Button_Play" to="." method="_on_Button_Play_pressed"]
[connection signal="pressed" from="Buttons/Button_Credits" to="." method="_on_Button_Credits_pressed"]
[connection signal="pressed" from="Buttons/Button_Quit" to="." method="_on_Button_Quit_pressed"]
